# resturant_inspect_ai_server

./: .env.example  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  deploy.ps1  deploy.sh  main.py  pyproject.toml  start_dashboard.ps1  train.py  update_restaurant_name.py  upload_model.py
alembic/: env.py
alembic/versions/: 20260323_0001_create_reviews_and_review_annotations.py  20260324_0001_add_restaurant_name_to_reviews.py  20260324_0002_create_restaurants_table.py  20260324_0003_remove_restaurant_name_column.py  5eed963bbc03_add_training_runs_table_and_reviewer_.py
app/core/: __init__.py  labeling.py
app/db/: __init__.py  enums.py  models.py  session.py
docs/: README.md  architecture.md  flow.md  mermaid-syntax.md  system-components.md
scripts/: approve_annotations.py  bootstrap_reviews.py  generate_draft_annotations.py  train.py  update_restaurant_name.py  verify_clean_structure.py  verify_database.py
streamlit_app/: Home.py  README.md
streamlit_app/pages/: Annotations.py  Training.py
