[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-inspector"
version = "1.0.0"
description = "Restaurant review aspect classifier using DistilBERT"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "dotenv",
    "uvicorn[standard]",
    "transformers",
    "datasets",
    "torch",
    "pydantic",
    "python-multipart",
    "huggingface_hub",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
